--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css');
+@import url('https://fonts.googleapis.com/css?family=Acme|Lobster|Lobster+Two|Pacifico|Poiret+One');
+
 
 
 * {
@@ -8,6 +10,7 @@
 body {
     margin: 0;
     padding-top: 80px;
+    
 }
 
 nav {
@@ -22,16 +25,26 @@ nav {
     width: 100%;
     height: 80px;
     background: rgb(127, 181, 238);
-    color: #f8f8ff;
+    color: rgb(249, 195, 60);
+    text-shadow: 1px 1px grey;
+    font-family: 'Poiret One', cursive;
 }
 
 h2 {
+    font-family: 'Lobster', cursive;
     font-size: 50px;
     mix-blend-mode: exclusion;
 }
 
+.subtitle {
+    font-family: 'Poiret One', cursive;
+    letter-spacing: 3px;
+    padding-top:0px;
+    margin-top: 0px; 
+}
+
 nav a {
-    color: inherit;
+    color: #f8f8ff;
     text-decoration: none;
     margin-left: 20px; 
 }
@@ -64,6 +77,7 @@ section {
 }
 
 footer {
+    font-family: 'Poiret One', cursive;
     width: 100%;
     padding: 50px 10%;
     background: rgb(127, 181, 238);
@@ -121,7 +135,8 @@ img {
 }
 
 .contact-info > li > a:hover {
-    color: dodgerblue;
+    color: rgb(249, 195, 60);
+    /* color: dodgerblue; */
     
 }
 
@@ -130,6 +145,7 @@ img {
 }
 
 .project {
+    font-family: 'Poiret One', cursive;
     box-sizing: border-box;
     position: relative;
     transition: all 1s ;
