--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav {
     font-family: 'Poiret One', cursive;
 }
 
+
 h2 {
     font-family: 'Lobster', cursive;
     font-size: 50px;
@@ -185,6 +186,7 @@ text-align: center;
 .project-img {
     width: 100%;
     height: 40vh;
+    border: 2px solid rgb(127, 181, 238);
 }
 
 .skills-li{
@@ -196,11 +198,76 @@ text-align: center;
     margin: 10px 0;
 }
 
+.skills-title {
+    text-decoration: underline;
+    text-decoration-color: white;
+}
+
+.topnav {
+    display: none;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  width: 100%;
+   top: 0;
+    left: 0;
+    background: rgb(127, 181, 238);
+   color: rgb(249, 195, 60);
+    font-family: 'Poiret One', cursive;
+    padding: 0 10px;
+    z-index: 10;
+}
+
+.topnav #myLinks {
+  display: none;
+  color: white;
+}
+
+.topnav a {
+  color: inherit;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  color: rgb(249, 195, 60);
+    text-shadow: 1px 1px darkblue;
+    text-decoration: underline;
+}
+
+.active {
+     color: rgb(249, 195, 60);
+    text-shadow: 1px 1px grey;
+}
+
 @media (max-width: 768px){
     .sm-col-12 {
         width: 100%;
     }
-    img {
-        border-radius: 0;
-    }
+    .project-img {
+    height: 20vh;
+}
+.topnav {
+   display: block;
+}
+nav {
+    display: none;
+}
+h1{
+    font-size: 18px;
+    display: inline-block;
+}
+body {
+    padding-top: 40px;
+    
+}
 }
