--- a/style.css
+++ b/style.css
@@ -271,7 +271,19 @@ text-align: center;
     text-shadow: 1px 1px grey;
 }
 
+.title{
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-variant: small-caps;
+    font-weight: lighter;
+    color: rgb(4, 82, 150);
+}
 
+.sub {
+    color: rgb(75, 136, 201);
+    font-size: 20px;
+}
 
 @media (max-width: 768px){
     .sm-col-12 {
